# bili-hardcore

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml  main.yml
bili-hardcore/scripts/: start_senior.py
src/bili_hardcore/: __init__.py  app.py  auth.py  config.py  database.py  models.py
src/bili_hardcore/api/: __init__.py  auth_routes.py  settings_routes.py  task_routes.py  ws_routes.py
src/bili_hardcore/core/: __init__.py  bili_client.py  captcha_solver.py  llm_client.py  task_manager.py
src/bili_hardcore/static/: index.html
src/bili_hardcore/static/css/: style.css
src/bili_hardcore/static/js/: app.js  auth.js  qrcode.js  settings.js  task.js  websocket.js
